update to the weekly project. still has bugs in it: [when jumping trough pictures via buttons, thumbnail does not follows it.]

--- a/week-7/thursday/weekly_project/style.css
+++ b/week-7/thursday/weekly_project/style.css
@@ -4,27 +4,114 @@ body {
 }
 
 header {
-  background-color: grey;
+  background-color: #4B4E4F;
   box-shadow: inset 0 0 0 1px rgba(31,31,31,.66) , 0 0 10px rgba(0,0,0,.75) , 0 0 10px rgba(0,0,0,.75);
-  margin-top: 0;
+  top: 0;
+  width: 100%;
   max-height: 40px;
   padding-bottom: 40px;
+  position: fixed;
+}
+
+footer {
+  background-color: #4B4E4F;
+  box-shadow: inset 0 0 0 1px rgba(31,31,31,.66) , 0 0 10px rgba(0,0,0,.75) , 0 0 10px rgba(0,0,0,.75);
+  bottom: 0;
+  width: 100%;
+  max-height: 40px;
+  padding-top: 40px;
+  position: fixed;
+}
+
+h1, h2 {
+  color: white;
+  margin-top: 0;
+  font-size: 34px;
+  font-family: Lucida Console;
 }
 
 h1 {
-  margin-top: 0;
-  font-size: 34px;
+  text-align: center;
+  padding-top: 20px;
+}
+
+h2 {
+  padding-left: 20px;
+}
+
+.main-container {
+  justify-content: space-between;
+  margin-top: 80px;
+  margin-bottom: 55px;
 }
 
 .pictureHolder {
-  margin: 0 auto;
-  margin-top: 40px;
-  max-width: 70%;
+  position: fixed;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 0;
+  margin-top: 60px;
+  margin-left: 30px;
+  width: 70%;
+  height: 70%;
+
+  order: 0;
 }
 
 .currentPicture {
   margin: 0 auto;
   max-width: 90%;
-  text-shadow: 4px 4px 8px black;
   box-shadow: inset 0 0 0 1px rgba(31,31,31,.66) , 0 0 10px rgba(0,0,0,.75) , 0 0 10px rgba(0,0,0,.75);
+}
+
+.prev {
+  background-color: red;
+  opacity: 0;
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  top: 0;
+  left: 0;
+}
+
+.next {
+  background-color: blue;
+  opacity: 0;
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  top: 0;
+  right: 0;
+}
+
+.thumbnails {
+  background-color: grey;
+  display: block;
+  float: right;
+  width: 400px;
+  margin-right: 30px;
+  margin-bottom: 80px;
+  height: 100%;
+  overflow: hidden;
+  clear: both;
+  left: 50%;
+}
+
+.thumbnails img {
+  max-width: 95%;
+  margin: 10px;
+}
+
+.thumbnails img:hover {
+  box-shadow: inset 0 0 0 1px #00af89 , 0 0 15px #00af89 , 0 0 15px #00af89;
+}
+
+.actual {
+  box-shadow: inset 0 0 0 1px red , 0 0 15px red , 0 0 15px red;
+}
+
+.logo {
+  position: absolute;
 }
